<package>
  <name>pr2_delivery</name>
  <version>1.0.6</version>
  <description>This package contains scripts for making a PR2 deliver a small
  object from one place to another, and return to a home base.</description>
  <maintainer email="dash@clearpathrobotics.com">Maintainer=Devon Ash</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_delivery</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Dave Hershberger</author>
  <author>Maintainer=Devon Ash</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>pr2_move_base</build_depend> -->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pr2_tuck_arms_action</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>
  <build_depend>pr2_gripper_sensor_action</build_depend>
  <build_depend>pr2_move_base</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pr2_move_base</run_depend>
  <run_depend>pr2_tuck_arms_action</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>
  <run_depend>pr2_gripper_sensor_action</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>pr2_move_base</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>pr2_tuck_arms_action</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_msgs</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_action</test_depend> -->

</package>

